[package]
name = "open-gal"
version = "0.1.0"
authors = ["eeli1 <maierelias13@gmail.com>"]
edition = "2018"

[features]
default = []
cli = ["serde_json", "clap"]

[dependencies]
bool-func-parser = { git = "https://github.com/eeli1/bool-func-parser", branch = "dev"}
serde_json = { version = "1.0", optional = true }
clap = { version = "3.0.0-beta.4", features = ["yaml"], optional = true }

[dev-dependencies]
lazy_static = "1.4.0" 
