[package]
name = "open-gal"
version = "0.1.0"
authors = ["eelias13 <maierelias13@gmail.com>"]
edition = "2018"

[dependencies]
logos = "0.12"
serde = { version = "1.0", features = ["derive"] }
bool-algebra = { git = "https://github.com/eelias13/bool-algebra", version = "0.1.0" }
tokenizer = { git = "https://github.com/eelias13/tokenizer", version = "0.1.0" }
hardware-sim = { git = "https://github.com/eelias13/hardware-sim", version = "0.1.0" }
