[package]
name = "open-gal"
version = "0.1.0"
authors = ["elias-2001-de <maierelias13@gmail.com>"]
edition = "2021"

[dependencies]
logos = "0.12"
serde = { version = "1.0", features = ["derive"] }
bool-algebra = { git = "https://github.com/elias-2001-de/bool-algebra", version = "0.1.0" }
tokenizer = { git = "https://github.com/elias-2001-de/tokenizer", version = "0.1.0" }
hardware-sim = { git = "https://github.com/elias-2001-de/hardware-sim", version = "0.1.0" }
